--- a/markdeep-slides/reset.css
+++ b/markdeep-slides/reset.css
@@ -17,7 +17,7 @@ Note: I would've liked to define `--rf: calc(1rem / 16px)` and then use it like
       `calc(<N>px * var(--rf))`, but `calc` understandably, yet disappointingly,
       can't deal with "rem per pixel" units.
 
-Note: This is based on Markdeep 1.04 and will need adjustments for newer
+Note: This is based on Markdeep 1.05 and will need adjustments for newer
       Markdeep versions.
 
 ********************************************************************************
@@ -310,7 +310,7 @@ still work just fine */
 }
 
 
-/* make diagram lines a bit thinner (should be defined in px – diagrams are scaled differently than the rest) */
+/* make diagram lines a bit thinner (must be defined in px – diagrams are scaled differently than the rest) */
 .md svg.diagram {
     stroke-width: 1.5px;
 }
@@ -395,7 +395,7 @@ still work just fine */
 .md iframe[src^="https://www.youtube"],
 .md iframe[src^="https://player.vimeo"] {
     width: 21.33rem;
-    height: 12rem;
+    height: 12rem;  /* 16:9 aspect ratio */
 }
 
 
