--- a/markdeep-slides/markdeep-slides.css
+++ b/markdeep-slides/markdeep-slides.css
@@ -3,7 +3,7 @@
 :root {
     --font-size: 28;         /* unit-less – just tweak it to your liking */
     --side-margin: 2rem;     /* left and right margin of each slide */
-    --aspect-ratio: 16 / 9;  /* can be overridden via js */
+    --aspect-ratio: 16 / 9;  /* may be overridden via js */
 
     --slide-number-color: #bbb;
     --slide-number-font: inherit;
@@ -13,7 +13,7 @@
 }
 
 @page {
-    size: 640px 360px;  /* can be overridden via js */
+    size: 640px 360px;  /* for a 16:9 aspect ratio; may be overridden via js */
 }
 
 html.draft,
@@ -201,8 +201,8 @@ html.presenter-notes {
 
 @media print {
     .slide {
-        --slide-width: 640px;
-        --slide-height: 360px;
+        --slide-width: 640px;  /* for a 16:9 aspect ratio; may be overridden via js */
+        --slide-height: 360px;  /* for a 16:9 aspect ratio; may be overridden via js */
     }
     .slide, .draft .slide, .presentation .slide {
         page-break-before: always;  /* make sure to insert page breaks between slides (might not actually be needed anymore) */
