--- a/markdeep-slides/reset.css
+++ b/markdeep-slides/reset.css
@@ -48,11 +48,10 @@ still work just fine */
     font-family: inherit;
 }
 
-
-/* make diagram lines a bit thinner (must be defined in px – diagrams are scaled differently than the rest) */
+/* diagrams */
 .md svg.diagram {
     font-size: 13.5px;  /* the relative font size introduced in markdeep 1.09 will otherwise clash with diagram scaling as implemented here, yielding grotesquely large font sizes */
-    stroke-width: 1.5px;
+    stroke-width: 1.5px;  /* make lines a bit thinner (must be defined in px – diagrams are scaled differently than the rest) */
 }
 
 
